<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_forward"
        android:enabled="false"
        android:icon="@drawable/ic_menu_forward_grey"
        android:orderInCategory="99"
        android:title="@string/action_settings"
        android:visible="true"
        app:showAsAction="always" />

</menu>
