...
    <!-- Button Labels -->
    <string name="rescan_label">Re-scan</string>
    <string name="rescan_label_question">Re-scan?</string>
    <string name="scan_label">Scan</string>
    <string name="cancel_button" tools:ignore="ButtonCase">Cancel</string>
    <string name="please_wait_button">Please Wait</string>
    <string name="scan">Scan</string>
    <string name="confirm">Confirm</string>
    <string name="restart">Restart</string>
    <!-- Content Descriptions -->

    <!--SyncerSync Button Text -->
    <!-- Toast Messages -->
...
